--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@uiw/react-codemirror": "^4.21.1",
+    "@uiw/codemirror-theme-sublime": "^4.21.2",
+    "@uiw/codemirror-themes": "^4.21.2",
+    "@uiw/react-codemirror": "^4.21.2",
+    "codemirror": "^5.65.13",
+    "css-loader": "^6.8.1",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
