--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@uiw/react-codemirror": "^4.21.2",
     "codemirror": "^5.65.13",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.1.4",
     "firebase": "^9.22.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
